// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells" detectFnmByAll 1`] = `
{
  "aliasesDefaultPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/aliases/default",
  "detectedBy": [
    "env",
  ],
  "fnmDir": "C:/Users/zzzzzzz/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "node-versions",
  "installationPath": Any<String>,
  "isFnm": true,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells" detectFnmByEnv 1`] = `
{
  "aliasesDefaultPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/aliases/default",
  "aliasesDefaultPathReal": undefined,
  "detectedBy": "env",
  "fnmDir": "C:/Users/zzzzzzz/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "node-versions",
  "installationPath": Any<String>,
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells" detectFnmByExecPath 1`] = `
{
  "aliasesDefaultPath": undefined,
  "aliasesDefaultPathReal": undefined,
  "detectedBy": "execpath",
  "isFnm": false,
  "isSameAsAliasDefault": undefined,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556" detectFnmByAll 1`] = `
{
  "detectedBy": [
    "execpath",
    "env",
  ],
  "fnmPath": Any<String>,
  "fnmPathType": "fnm_multishells",
  "isFnm": true,
  "multishellDir": "C:/Users/xxxxxxx/AppData/Local/fnm_multishells",
  "multishellKey": "7064_1771483456556",
  "multishellPath": "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556" detectFnmByEnv 1`] = `
{
  "aliasesDefaultPath": undefined,
  "aliasesDefaultPathReal": undefined,
  "detectedBy": "env",
  "fnmPath": Any<String>,
  "fnmPathType": "fnm_multishells",
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "multishellDir": "C:/Users/yyyyyyy/AppData/Local/fnm_multishells",
  "multishellKey": "7064_1771483456556",
  "multishellPath": "C:/Users/yyyyyyy/AppData/Local/fnm_multishells/7064_1771483456556",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556" detectFnmByExecPath 1`] = `
{
  "aliasesDefaultPath": undefined,
  "aliasesDefaultPathReal": undefined,
  "detectedBy": "execpath",
  "fnmPath": Any<String>,
  "fnmPathType": "fnm_multishells",
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "multishellDir": "C:/Users/xxxxxxx/AppData/Local/fnm_multishells",
  "multishellKey": "7064_1771483456556",
  "multishellPath": "C:/Users/xxxxxxx/AppData/Local/fnm_multishells/7064_1771483456556",
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm" detectFnmByAll 1`] = `
{
  "aliasesDefaultPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/aliases/default",
  "detectedBy": [
    "env",
  ],
  "fnmDir": "C:/Users/zzzzzzz/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "node-versions",
  "installationPath": Any<String>,
  "isFnm": true,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm" detectFnmByEnv 1`] = `
{
  "aliasesDefaultPath": "C:/Users/zzzzzzz/AppData/Roaming/fnm/aliases/default",
  "aliasesDefaultPathReal": undefined,
  "detectedBy": "env",
  "fnmDir": "C:/Users/zzzzzzz/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "node-versions",
  "installationPath": Any<String>,
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm" detectFnmByExecPath 1`] = `
{
  "aliasesDefaultPath": undefined,
  "aliasesDefaultPathReal": undefined,
  "detectedBy": "execpath",
  "isFnm": false,
  "isSameAsAliasDefault": undefined,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default" detectFnmByAll 1`] = `
{
  "aliasesDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "default",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "detectedBy": [
    "execpath",
    "env",
  ],
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "aliases",
  "installationPath": Any<String>,
  "isFnm": true,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default" detectFnmByEnv 1`] = `
{
  "aliasesDefaultPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/default",
  "aliasesDefaultPathReal": undefined,
  "aliasesName": "default",
  "aliasesPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/default",
  "detectedBy": "env",
  "fnmDir": "C:/Users/yyyyyyy/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "aliases",
  "installationPath": Any<String>,
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default" detectFnmByExecPath 1`] = `
{
  "aliasesDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesDefaultPathReal": undefined,
  "aliasesName": "default",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "detectedBy": "execpath",
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "aliases",
  "installationPath": Any<String>,
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest" detectFnmByAll 1`] = `
{
  "aliasesDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "latest",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest",
  "detectedBy": [
    "execpath",
    "env",
  ],
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "aliases",
  "installationPath": Any<String>,
  "isFnm": true,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest" detectFnmByEnv 1`] = `
{
  "aliasesDefaultPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/default",
  "aliasesDefaultPathReal": undefined,
  "aliasesName": "latest",
  "aliasesPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/latest",
  "detectedBy": "env",
  "fnmDir": "C:/Users/yyyyyyy/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "aliases",
  "installationPath": Any<String>,
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest" detectFnmByExecPath 1`] = `
{
  "aliasesDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesDefaultPathReal": undefined,
  "aliasesName": "latest",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/latest",
  "detectedBy": "execpath",
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "aliases",
  "installationPath": Any<String>,
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest" detectFnmByAll 1`] = `
{
  "aliasesDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesName": "lts-latest",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest",
  "detectedBy": [
    "execpath",
    "env",
  ],
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "aliases",
  "installationPath": Any<String>,
  "isFnm": true,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest" detectFnmByEnv 1`] = `
{
  "aliasesDefaultPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/default",
  "aliasesDefaultPathReal": undefined,
  "aliasesName": "lts-latest",
  "aliasesPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/lts-latest",
  "detectedBy": "env",
  "fnmDir": "C:/Users/yyyyyyy/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "aliases",
  "installationPath": Any<String>,
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest" detectFnmByExecPath 1`] = `
{
  "aliasesDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesDefaultPathReal": undefined,
  "aliasesName": "lts-latest",
  "aliasesPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/lts-latest",
  "detectedBy": "execpath",
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "aliases",
  "installationPath": Any<String>,
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation" detectFnmByAll 1`] = `
{
  "aliasesDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "detectedBy": [
    "execpath",
    "env",
  ],
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "node-versions",
  "installationPath": Any<String>,
  "isFnm": true,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation" detectFnmByEnv 1`] = `
{
  "aliasesDefaultPath": "C:/Users/yyyyyyy/AppData/Roaming/fnm/aliases/default",
  "aliasesDefaultPathReal": undefined,
  "detectedBy": "env",
  "fnmDir": "C:/Users/yyyyyyy/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "node-versions",
  "installationPath": Any<String>,
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "version": Any<String>,
}
`;

exports[`fnm "C:/Users/xxxxxxx/AppData/Roaming/fnm/node-versions/v24.13.1/installation" detectFnmByExecPath 1`] = `
{
  "aliasesDefaultPath": "C:/Users/xxxxxxx/AppData/Roaming/fnm/aliases/default",
  "aliasesDefaultPathReal": undefined,
  "detectedBy": "execpath",
  "fnmDir": "C:/Users/xxxxxxx/AppData/Roaming/fnm",
  "fnmPath": Any<String>,
  "fnmPathType": "node-versions",
  "installationPath": Any<String>,
  "isFnm": true,
  "isSameAsAliasDefault": undefined,
  "version": Any<String>,
}
`;
